[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secrettrack"
version = "1.0.0"
description = "A professional tool for detecting exposed secrets in code and configuration files"
readme = "README.md"
authors = [
    {name = "Juphin Mbaya", email = "juphinmbaya0@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["security", "secrets", "detection", "devsecops", "appsec"]
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
]

[project.scripts]
secrettrack = "secrettrack.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/secrettrack"
BugTracker = "https://github.com/yourusername/secrettrack/issues"