[metadata]
name = secretshunter
version = 1.0.0
author = SecretsHunter Team
author_email = security@example.com
description = A professional tool for detecting exposed secrets in code and configuration files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/secretshunter
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Security

[options]
packages = find:
python_requires = >=3.9
install_requires =
    colorama>=0.4.6
    pyyaml>=6.0

[options.entry_points]
console_scripts =
    secretshunter = secretshunter.cli:main

[options.packages.find]
exclude =
    tests*
    examples*

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,build,dist

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88